[gd_scene load_steps=5 format=3 uid="uid://dki36qsxtoenr"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_psa3m"]
[ext_resource type="FontFile" uid="uid://dtch632goxoep" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_j4yfm"]
[ext_resource type="Texture2D" uid="uid://o70xrrpfj55s" path="res://assets/UI/heart.png" id="3_0nxjb"]
[ext_resource type="PackedScene" uid="uid://b2gcyfi3axbp0" path="res://scenes/UIScenes/player_inventory_ui.tscn" id="4_6mea7"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_psa3m")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 43.0
offset_top = -3.0
offset_right = 193.0
offset_bottom = 101.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_top = 55

[node name="playerInventoryUI" parent="MarginContainer" instance=ExtResource("4_6mea7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 1216.0
offset_bottom = 788.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="levelCompleteLabel" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_j4yfm")
text = "Level complete
Returning home in: "
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Control" type="Control" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="heart1" type="Sprite2D" parent="Control/MarginContainer/VBoxContainer/Control"]
position = Vector2(23, 55)
scale = Vector2(3, 3)
texture = ExtResource("3_0nxjb")

[node name="heart2" type="Sprite2D" parent="Control/MarginContainer/VBoxContainer/Control"]
position = Vector2(74, 55)
scale = Vector2(3, 3)
texture = ExtResource("3_0nxjb")

[node name="heart3" type="Sprite2D" parent="Control/MarginContainer/VBoxContainer/Control"]
position = Vector2(125, 55)
scale = Vector2(3, 3)
texture = ExtResource("3_0nxjb")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="score" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_j4yfm")
theme_override_font_sizes/font_size = 24
text = "Coins: 0"
uppercase = true

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 176
theme_override_constants/margin_right = 96

[node name="progressDot" type="ColorRect" parent="Control/MarginContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
z_index = 1
custom_minimum_size = Vector2(10, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="waveContainer" type="Control" parent="Control/MarginContainer/MarginContainer"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="waveUIHBox" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/waveContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
offset_right = 816.0
offset_bottom = 10.0
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer/MarginContainer/waveContainer/waveUIHBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.320296, 0.546746, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Control/MarginContainer/MarginContainer/waveContainer/waveUIHBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.692691, 0.0674091, 0.0891397, 1)

[node name="ColorRect3" type="ColorRect" parent="Control/MarginContainer/MarginContainer/waveContainer/waveUIHBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.681744, 0.393914, 0.0448697, 1)
